[tool.poetry]
name = "muffin-grpc"
version = "0.5.4"
description = "GRPC support for Muffin framework."
readme = "README.rst"
homepage = "https://github.com/klen/muffin-grpc"
repository = "https://github.com/klen/muffin-grpc"
authors = ["Kirill Klenov <horneds@gmail.com>"]
license = "MIT"
keywords = ["grpc", "muffin", "asyncio", "asgi", "web"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: AsyncIO",
]
packages = [
  { include = "muffin_grpc" },
]

[tool.poetry.dependencies]
python = "^3.8"
muffin = "^0"
grpcio = "^1"
grpcio-tools = "^1"
parsy = "*"
attrs = "*"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-aio = "*"
pytest-mypy = "*"
ruff = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"

[tool.poetry.group.example.dependencies]
uvicorn = "*"
muffin-jinja2 = "*"

[tool.pytest.ini_options]
addopts = "-xsv"
log_cli = true

[tool.mypy]
packages = ["muffin_grpc"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py38"
exclude = [".venv", "docs", "examples"]
select = ["ALL"]
ignore = ["D", "UP", "ANN", "DJ", "EM", "RSE", "SLF", "RET", "S101", "PLR2004", "PLR0912", "N804", "A003", "TRY003"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
preview = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
