[wheel]
python-tag = py3

[metadata]
name = muffin-grpc
version = attr: muffin_grpc.__version__
url = https://github.com/klen/muffin-grpc
description = GRPC support for Muffin framework.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = grpc, muffin, asyncio, asgi, web
project_urls = 
	Documentation = https://github.com/klen/muffin-grpc
	Source code = https://github.com/klen/muffin-grpc
	Issue tracker = https://github.com/klen/muffin-grpc/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = muffin_grpc,
include_package_data = True
python_requires = >= 3.7
install_requires = 
    muffin      >= 0.60
    grpcio
    grpcio-tools
    parsy

[options.package_data]
muffin_grpc = 
	py.typed

[options.extras_require]
tests = 
    pytest
    pytest-aio
    pytest-mypy
build = 
    bump2version
    twine
    wheel
example =
    uvicorn
    muffin-jinja2

[tool:pytest]
addopts = -xsv

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py

[pylama]
ignore = D211,D213,D401

[pylama:example/*]
ignore = D

[pylama:setup.py]
ignore = D

[pylama:tests/*]
ignore = D

[pytest]
addopts = -s

[mypy]
ignore_missing_imports = True
